--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,5 +1,9 @@
 {% extends "base.html" %}
 
 {% block content %}
-<h1>Hello, welcome to My Travel Blog!</h1>
+<h1>"Where You've Been and Where You're Going"</h1>
+
+<h3>My Travel Scrapbook allows you to log and share your past and future travel plans.
+Share your most exciting experiences from your latest trip, or see how others enjoy traveling to plan your next adventure!</h3>
+
 {% endblock %}
