--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -1,19 +1,70 @@
-<html>
-    <head>
+{% extends 'bootstrap/base.html' %}
+
+
+{% block title %}
         {% if title %}
-        <title>{{ title }} - Microblog</title>
+       {{ title }} - MyTravelScrapbook
         {% else %}
-        <title>Welcome to Microblog</title>
+        MyTravelScrapbook
         {% endif %}
-    </head>
-    <body>
-        <div>
-            <a href="/index">Home</a>
-            <a href="/pastLocations">Where I've Been</a>
-            <a href="/futureLocations">Where I'm Going</a>
+{% endblock %}
+
+{% block navbar %}
+<nav class="navbar navbar-default">
+        <div class="container">
+                <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+                    <span class="sr-only">Toggle navigation</span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                </button>
+                <a class="navbar-brand" href="{{ url_for('index') }}">My Travel Scrapbook</a>
         </div>
 
-        <hr>
-        {% block content %}{% endblock %}
-    </body>
-</html>
+            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+
+                <ul class="nav navbar-nav">
+                <li>
+                    <a  href="/beenList"> Where I've Been </a>
+                </li>
+                <li>
+                     <a href="/wishList">Where I'm Going</a>
+                </li>
+                <li >
+                    <a class="nav-link" href="/explore">Explore</a>
+                </li>
+            </ul>
+
+            <ul class="nav navbar-nav navbar-right">
+
+                  <li class="nav-item">
+                        {% if current_user.is_anonymous %}
+                            <a class="nav-link" href="{{ url_for('login') }}">Login/Sign Up</a>
+                        {% else %}
+                            <a class="nav-link" href="{{ url_for('logout') }}">Logout</a>
+                        {% endif %}
+                  </li>
+            </ul>
+
+        </div>
+        <!-- ^^collapse -->
+
+</nav>
+{% endblock %}
+
+{% block content %}
+    <div class="container">
+        {% with messages = get_flashed_messages() %}
+        {% if messages %}
+            {% for message in messages %}
+            <div class="alert alert-info" role="alert">{{ message }}</div>
+            {% endfor %}
+        {% endif %}
+        {% endwith %}
+
+        {# application content needs to be provided in the app_content block #}
+        {% block app_content %}{% endblock %}
+    </div>
+{% endblock %}
+
+
