--- a/app/templates/create_user.html
+++ b/app/templates/create_user.html
@@ -14,8 +14,15 @@
         </p>
         <p>
             {{ form.email.label }}<br>
-            {{ form.email(size=64) }}<br>
+            {{ form.email(size=32) }}<br>
             {% for error in form.email.errors %}
+            <span style="color: red;">[{{ error }}]</span>
+            {% endfor %}
+        </p>
+          <p>
+            {{ form.country.label }}<br>
+            {{ form.country(size=32) }}<br>
+            {% for error in form.country.errors %}
             <span style="color: red;">[{{ error }}]</span>
             {% endfor %}
         </p>
