Done please make it look pretty

--- a/app/templates/beenList.html
+++ b/app/templates/beenList.html
@@ -13,7 +13,7 @@
                                 <h3 class="card-title text-center"><b>{{post.City.name}}</b></h3>
                                 <p class="card-text text-center">{{post.blog}}</p>
 
-                                    <a href="beenPost.html/{{post.City.name}}" class="btn btn-primary">See More...</a>
+                                    <a href="beenPost/{{post.id}}" class="btn btn-primary">See More...</a>
                             </div>
                         </div>
                     {% endfor %}
