--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -29,9 +29,9 @@
     <div class="row">
         <div class="col-6">
             <h3><ul>
-                <li><a href="beenList.html">Log Your Travels</a></li>
-                <li><a href="beenList.html">Plan Your Future Trips</a></li>
-                <li><a href="explore.html">Explore Where Others Have Gone</a></li>
+                <li><a href="/beenList">Log Your Travels</a></li>
+                <li><a href="/wishList">Plan Your Future Trips</a></li>
+                <li><a href="/explore">Explore Where Others Have Gone</a></li>
 
             </ul></h3>
 
