--- a/app/templates/wishList.html
+++ b/app/templates/wishList.html
@@ -13,7 +13,7 @@
                         <div class="card-body  text-center" style="background-color:#2de7e7;">
                                 <h3 class="card-title text-center">{{posts.City.name}}</h3>
                                     <p class="card-text text-center">{{posts.blog}}</p>
-                            <a href="wishPost/{{posts.City.name}}" class="btn btn-primary">See More...</a></span>
+                            <a href="wishPost/{{posts.id}}" class="btn btn-primary">See More...</a></span>
                             </div>
                         </div>
                     {% endfor %}
