--- a/app/templates/beenPost.html
+++ b/app/templates/beenPost.html
@@ -2,11 +2,10 @@
 {% import 'bootstrap/wtf.html' as wtf %}
 
 {% block app_content %}
-    <h1>{{User.name}}'s Trip to {{User.Post.City.name}},{{User.Post.Country.name}}</h1>
+    <h1>{{user.username}}'s Trip to {{post.City.name}}, {{post.City.Country.name}}</h1>
     <hr>
-    <h3>{{User.Post.StartDate}} - {{User.Post.EndDate}}</h3>
-
-    <p>{{User.Post.blog}}</p>
-
+    <h4>{{post.StartDate}} to {{post.EndDate}}</h4>
+<hr>
+    <p>{{post.blog}}</p>
 
 {% endblock %}
