--- a/app/templates/wishPost.html
+++ b/app/templates/wishPost.html
@@ -2,10 +2,10 @@
 {% import 'bootstrap/wtf.html' as wtf %}
 
 {% block app_content %}
-    <h1>{{User.name}}'s Trip to {{post.City.name}},{{post.Country.name}}</h1>
+    <h1>{{user.username}}'s Dream Trip to {{post.City.name}}, {{post.City.Country.name}}</h1>
     <hr>
-    <h3>{{post.StartDate}} - {{post.EndDate}}</h3>
-
-    <p>{{User.Post.blog}}</p>
+    <h4>{{post.StartDate}} to {{post.EndDate}}</h4>
+<hr>
+    <p>{{post.blog}}</p>
 
 {% endblock %}
