--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -3,16 +3,14 @@
 
 {% block content %}
 
-
-<div class="container">
-
+<div class="container-fluid">
     <div class="row">
 
-        <div class="col-8 border">
-            <h1 class='text-center'>"Where You've Been and Where You're Going"</h1>
+        <div class="col-8">
+            <h1 class='text-center'>"Where You've Been and Where You're Going"</h1 class='text-center'>
         </div>
 
-        <div class="col-4 border">
+        <div class="col-4">
             <p>
             <h3 class="text-center">My Travel Scrapbook allows you to log and share your past and future travel plans.
                 Share your most exciting experiences from your latest trip, or see how others enjoy traveling to plan
@@ -21,24 +19,34 @@
         </div>
 
     </div>
-    <br>
-
 </div>
 
-<div class="container-fluid">
-    <div class="row">
-        <div class="col-6">
-            <h3><ul>
-                <li><a href="/beenList">Log Your Travels</a></li>
-                <li><a href="/wishList">Plan Your Future Trips</a></li>
-                <li><a href="/explore">Explore Where Others Have Gone</a></li>
+<br>
 
-            </ul></h3>
 
+<section style="background-color:#ffb3b3">
+    <div class="container-fluid" style="color-white">
+        <div class="row">
+            <div class="col-6">
+                <h3 class="text-center">
+                    <ul><b>
+                        <br>
+                        <p><a href="/beenList">Log Your Travels</a></p>
+                        <br>
+
+                        <p><a href="/wishList">Plan Your Future Trips</a></p>
+                        <br>
+                        <p><a href="/explore">Explore Where Others Have Gone</a></p>
+                        <br></b>
+                    </ul>
+                </h3>
+            </div>
+            <div class="col-6">
+                <img src="images/IMG_8120.JPG" width="3264" height="2448" alt="adventure image">
+            </div>
+        </div>
     </div>
-    <br>
-</div>
-</div>
+</section>
 
 
 {% endblock %}
